--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,16 @@
 language: python
 python: "3.6"
-install: pip install -r requirements.txt
-script: python -m pytest tests
+env:
+  - POSTGRES_HOST=localhost
+  - POSTGRES_PORT=5432
+  - POSTGRES_USER=postgres
+  - POSTGRES_PASS=
+  - POSTGRES_NAME=testdb
+services:
+  - postgresql
+before_script:
+  - psql -c 'create database testdb;' -U postgres
+install:
+  - pip install -r requirements.txt
+script:
+  - python -m pytest tests
